deploy: 01e5f1389d4c8f9aef3ae550462a92fd60656384

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <title>Quizzical</title>
-    <script type="module" crossorigin src="/Quizzical/assets/index.ad46c160.js"></script>
-    <link rel="stylesheet" href="/Quizzical/assets/index.92e564f8.css">
+    <script type="module" crossorigin src="/Quzzical/assets/index.ad46c160.js"></script>
+    <link rel="stylesheet" href="/Quzzical/assets/index.92e564f8.css">
   </head>
   <body>
     <div id="root"></div>
